# common_traits

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: fastmod.rs
examples/: atomic_data.rs  dot_product.rs
img/: cast.dot  deps.dot  downcast.dot  upcast.dot
src/: atomic.rs  atomic_finit_number.rs  atomic_float.rs  atomic_integer.rs  atomic_number.rs  atomic_word.rs  bits.rs  castable.rs  double_half.rs  downcastable.rs  fastrange.rs  finite_number.rs  float.rs  hash.rs  impls.rs  integer.rs  lib.rs  max_lanes.rs  memory_footprint.rs  non_max.rs  non_min_max.rs  non_zero.rs  number.rs  result.rs  rnd.rs  same_as.rs  scalar.rs  select_in_word.rs  selectors.rs  sequence.rs  signed_int.rs  signed_word.rs  slice.rs  splat.rs  to.rs  twine.rs  unsigned_int.rs  upcastable.rs  word.rs
tests/: atomics.rs  fast_range.rs  invariants.rs  select_in_word.rs
