[package]
name = "common_traits"
version = "0.12.0"
edition = "2021"
description = "Traits to write generic functions on different numeric types, with atomic support, and other features."
repository = "https://github.com/zommiommy/common_traits"
authors = ["Tommaso Fontana", "Sebastiano Vigna"]
keywords = ["mathematics", "numerics"]
categories = ["algorithms", "science", "no-std"]
readme = "README.md"
license = "Apache-2.0"

[features]
default = ["half", "std"]
half = ["dep:half"]
nightly_f16 = []
std = ["anyhow/std"]
alloc = []
half_std = ["half", "half/std", "std"]
half_alloc = ["half", "half/alloc", "alloc"]
simd = []

[dependencies]
anyhow = { version = "1", default-features = false }
half = { version = "2", features = [
	"use-intrinsics",
], default-features = false, optional = true }
impl-tools = "0.11"

[dev-dependencies]
rand = { version = "0.9.1", features = ["small_rng"] }
